clusters/calcifer-cloud/apps/zigbee2mqtt/endpointslice.yaml
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: zigbee2mqtt-home
  namespace: zigbee2mqtt
  labels:
    kubernetes.io/service-name: zigbee2mqtt-home
addressType: IPv4
ports:
  - name: https
    protocol: TCP
    port: 443
endpoints:
  - addresses:
      - 172.31.255.2
    conditions:
      ready: true
