clusters/calcifer-cloud/apps/zigbee2mqtt/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zigbee2mqtt-home
  namespace: zigbee2mqtt
spec:
  ports:
    - name: https
      port: 443
      targetPort: 443
