clusters/calcifer-cloud/apps/zigbee2mqtt/traefik.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: zigbee2mqtt-security-headers
  namespace: zigbee2mqtt
spec:
  headers:
    contentTypeNosniff: true
    frameDeny: true
    referrerPolicy: no-referrer
    stsSeconds: 31536000
    stsIncludeSubdomains: true
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: zigbee2mqtt
  namespace: zigbee2mqtt
spec:
  entryPoints: [websecure]
  routes:
    - kind: Rule
      match: Host(`zigbee.calcifer.tech`)
      middlewares:
        - name: zigbee2mqtt-security-headers
      services:
        - name: zigbee2mqtt-home
          port: 443
          scheme: https
          serversTransport: zigbee2mqtt-home
          passHostHeader: true
  tls:
    secretName: zigbee2mqtt-cloud-tls
